# k230_libdisplay

./: .gitignore  Makefile  readme.md
doc/: api-guide.md
include/: display.h  pipeline.hpp
k230_display/: 0001-k23_display-modify-input-format-to-rgb.patch  readme.md
py_lib/: .gitignore  pyproject.toml
py_lib/Display/: __init__.py  _bindings.py
src/: display.c
test/: double-buffer.c  readme.md  rotation-test.c
test-c/: Makefile  display-test.c  readme.md
test-py/: display-test.py  double-buffer.py  rotation-test.py
